--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,26 @@ address {
 .navbar-dark {
   background-color: #512da8;
 }
+/* adding css for react animation  */
+
+.page-enter {
+  opacity: 0.01;
+  transform: translateX(-100%);
+}
+
+.page-enter-active {
+  opacity: 1;
+  transform: translateX(0%);
+  /* The transition starts quickly and then slowly eases into place.  */
+  transition: all 300ms ease-in;
+}
+.page-exit {
+  opacity: 1;
+  transform: translateX(0%);
+}
+.page-exit-active {
+  opacity: 0.01;
+  transform: translateX(100%);
+  /* The transition starts quickly and then slowly eases out of place.  */
+  transition: all 300ms ease-out;
+}
